==> nored/epaper-calendar/firmware/lib/epd/DEV_Config.cpp <==
/*****************************************************************************
* | File      	:   DEV_Config.c
* | Author      :   Waveshare team
* | Function    :   Hardware underlying interface
* | Info        :
*----------------
* |	This version:   V1.0
* | Date        :   2020-02-19
* | Info        :
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documnetation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to  whom the Software is
# furished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS OR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#
******************************************************************************/
#include "DEV_Config.h"
#include <SPI.h>

// Hardware SPI (FSPI) routed to the panel pins via the ESP32-S3 GPIO matrix.
// The reference driver bit-banged SPI, which is ~30-60 s for a full 960 KB
// frame; hardware SPI at 20 MHz does it in well under a second, saving battery.
static SPIClass epdSPI(FSPI);
static const SPISettings EPD_SPI_SETTINGS(20000000, MSBFIRST, SPI_MODE0);

void GPIO_Config(void)
{


    pinMode(EPD_BUSY_PIN,  INPUT);
    pinMode(EPD_RST_PIN , OUTPUT);
    pinMode(EPD_DC_PIN  , OUTPUT);
    pinMode(EPD_PWR_PIN,  OUTPUT);

    pinMode(EPD_SCK_PIN, OUTPUT);
    pinMode(EPD_MOSI_PIN, OUTPUT);
    pinMode(EPD_CS_M_PIN , OUTPUT);
    pinMode(EPD_CS_S_PIN , OUTPUT);

    digitalWrite(EPD_CS_M_PIN , HIGH);
    digitalWrite(EPD_CS_S_PIN , HIGH);
    digitalWrite(EPD_SCK_PIN, LOW);
    digitalWrite(EPD_PWR_PIN , HIGH);
}

void GPIO_Mode(UWORD GPIO_Pin, UWORD Mode)
{
    if(Mode == 0) {
        pinMode(GPIO_Pin , INPUT);
	} else {
		pinMode(GPIO_Pin , OUTPUT);
	}
}
/******************************************************************************
function:	Module Initialize, the BCM2835 library and initialize the pins, SPI protocol
parameter:
Info:
******************************************************************************/
UBYTE DEV_Module_Init(void)
{
	//gpio
	GPIO_Config();

	//serial printf
	Serial.begin(115200);

	// hardware SPI: SCK + MOSI only (panel is write-only), CS handled manually
	epdSPI.begin(EPD_SCK_PIN, -1, EPD_MOSI_PIN, -1);

	return 0;
}

/******************************************************************************
function:
			SPI read and write
******************************************************************************/


void DEV_SPI_WriteByte(UBYTE data)
{
    epdSPI.beginTransaction(EPD_SPI_SETTINGS);
    epdSPI.transfer(data);
    epdSPI.endTransaction();
}

UBYTE DEV_SPI_ReadByte()
{
    UBYTE j=0xff;
    GPIO_Mode(EPD_MOSI_PIN, 0);
    for (int i = 0; i < 8; i++)
    {
        j = j << 1;
        if (digitalRead(EPD_MOSI_PIN))  j = j | 0x01;
        else                            j = j & 0xfe;
        
        digitalWrite(EPD_SCK_PIN, GPIO_PIN_SET);     
        digitalWrite(EPD_SCK_PIN, GPIO_PIN_RESET);
    }
    GPIO_Mode(EPD_MOSI_PIN, 1);
    return j;
}

void DEV_SPI_Write_nByte(UBYTE *pData, UDOUBLE len)
{
    epdSPI.beginTransaction(EPD_SPI_SETTINGS);
    epdSPI.writeBytes(pData, len);   // fast block transfer (DMA-capable)
    epdSPI.endTransaction();
}


void DEV_Module_Exit(void)
{
    digitalWrite(EPD_PWR_PIN , LOW);
    digitalWrite(EPD_RST_PIN , LOW);
}
